INCLUDE_DIRECTORIES(
		./include
)

IF(WIN32)
ADD_DEFINITIONS(-DXK_DYNAMIC_LIBRARY)
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(./src SRC_LIST)

FILE(GLOB HDR_FILE_LIST "include/*.h")
FOREACH(myhdr ${HDR_FILE_LIST})
	LIST(APPEND INC_LIST ${myhdr})
ENDFOREACH()

LIST(APPEND SRC_LIST "${INC_LIST}")

ADD_LIBRARY(xkcore SHARED ${SRC_LIST})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)